# micro-arch

./: README.md  Semaphores.txt  mutualExclusion  mutualExclusion.c  prodCons  prodCons.cpp
Kernel/: kernelspace.c  userspace  userspace.c
NetworkThrottling/: Makefile  NetworkThrottling  main.cpp
NetworkThrottling/include/: NetworkNode.h  Packet.h  TokenBucket.h
NetworkThrottling/src/: NetworkNode.cpp  Packet.cpp  TokenBucket.cpp
__asm/: description.txt  dummy.c
algorithms/graph/: preorder  preorder.cpp  splitbrain.py
clockSynchronization/: clock_client  clock_client.cpp  clock_server  clock_server.cpp
mem-mgmt/: dynamic_array  dynamic_array.cpp  programcounter  programcounter.cpp
mem-mgmt/dynamic_array.dSYM/Contents/Resources/DWARF/: dynamic_array
mem-mgmt/dynamic_array.dSYM/Contents/Resources/Relocations/aarch64/: dynamic_array.yml
mem-mgmt/programcounter.dSYM/Contents/: Info.plist
mem-mgmt/programcounter.dSYM/Contents/Resources/DWARF/: programcounter
mem-mgmt/programcounter.dSYM/Contents/Resources/Relocations/aarch64/: programcounter.yml
todo-list/: CMakeLists.txt
todo-list/include/todo/: Task.h  TaskManager.h
todo-list/scripts/: build.sh  run_tests.sh
todo-list/src/: Task.cpp  TaskManager.cpp  main.cpp
todo-list/tests/: test_Task.cpp  test_TaskManager.cpp
